--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@nguniversal/express-engine": "^1.0.0-beta.0",
+    "angular-calendar": "^0.17.4",
     "express": "^4.15.2",
     "rxjs": "^5.3.0",
     "xhr2": "^0.1.4",
